# alhambreaker

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/alhambreaker/: __init__.py  __main__.py  browser.py  captcha.py  checker.py  config.py  notifier.py
tests/: __init__.py  conftest.py  test_browser.py  test_captcha.py  test_checker.py  test_config.py  test_notifier.py
